Fixed letter spacing

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{
   color: white;
   font-size: 22px;
   line-height: normal;
-  letter-spacing: -.015em;
+  letter-spacing: -.02em;
   overflow: hidden;
   background-image: url();
 }
